products/wiki/deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openwiki
  labels:
    app.kubernetes.io/name: openwiki
    app.kubernetes.io/part-of: openwiki
