products/wiki/deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwiki
  labels:
    app.kubernetes.io/name: openwiki
    app.kubernetes.io/instance: openwiki
    app.kubernetes.io/part-of: openwiki
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3030
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: openwiki
    app.kubernetes.io/instance: openwiki
